[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["Dev Kunjadia <90876986+devk03@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.3"
requests = "^2.32.3"
openmeteo-requests = "^1.3.0"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
numpy = "^2.2.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
